// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyStateRenderer snapshot (T-0006-113) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="No workouts yet"
  style={
    {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 32,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FAFAF7",
        "borderRadius": 44,
        "height": 88,
        "justifyContent": "center",
        "marginBottom": 20,
        "width": 88,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={48}
      bbWidth={48}
      fill="none"
      focusable={false}
      height={48}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#5C6470"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 48,
            "width": 48,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4284245104,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M3 12h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M3 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M3 6h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 12h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 18h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 6h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284245104,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#14171A",
        "fontSize": 18,
        "fontWeight": "600",
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 8,
        "textAlign": "center",
      }
    }
  >
    No workouts yet
  </Text>
  <Text
    style={
      {
        "color": "#5C6470",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Add your first workout to get started.
  </Text>
  <View
    accessibilityHint="Add workout"
    accessibilityLabel="Add workout"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#ECEEF1",
        "borderRadius": 12,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#14171A",
          "fontSize": 13,
          "fontWeight": "500",
          "lineHeight": 18,
        }
      }
    >
      Add workout
    </Text>
  </View>
</View>
`;

exports[`EmptyStateRenderer snapshot (T-0006-114) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="No workouts yet"
  style={
    {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 32,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FBF8F3",
        "borderRadius": 44,
        "height": 88,
        "justifyContent": "center",
        "marginBottom": 20,
        "width": 88,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={48}
      bbWidth={48}
      fill="none"
      focusable={false}
      height={48}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#6B5F56"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 48,
            "width": 48,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4285226838,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M3 12h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M3 18h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M3 6h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 12h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 18h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 6h13"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285226838,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessibilityRole="header"
    style={
      {
        "color": "#1A1715",
        "fontSize": 22,
        "fontWeight": "600",
        "letterSpacing": -0.1,
        "lineHeight": 30,
        "marginBottom": 8,
        "textAlign": "center",
      }
    }
  >
    No workouts yet
  </Text>
  <Text
    style={
      {
        "color": "#6B5F56",
        "fontSize": 16,
        "lineHeight": 26,
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Add your first workout to get started.
  </Text>
  <View
    accessibilityHint="Add workout"
    accessibilityLabel="Add workout"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EFE9DF",
        "borderRadius": 12,
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#1A1715",
          "fontSize": 14,
          "fontWeight": "500",
          "lineHeight": 20,
        }
      }
    >
      Add workout
    </Text>
  </View>
</View>
`;
